# tdd_sample

./: .gitignore  README.md  Story 0 Demo Notes.txt  Story 1 Demo Notes.txt  Story 2 Demo Notes.txt  Story 3 Demo Notes.txt  docker-compose.yml  fix demo 2.txt  init.sql  jq  pyproject.toml
presentation/: 1-agenda.md  2-why-automate.md  3 -unit-vs-integration.md  3-story-roadmap.md  4-story-1.md  4-story-2.md  4-story-roadmap.md  5-story-2.md  6-story-2.md  6-story-3.md  7-story-3.md
sample/: data_access.py  demo.html  get_db_connection_string.py  main.py  validators.py
tests/: test_main.py
tests/integration_tests/: test_get_contacts.py  test_get_root.py
tests/unit_tests/: test_unit_data_access.py  test_unit_main.py  test_unit_validators.py  test_validators.py
