[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["garyivy <gary.ivy@wwt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1"

pydantic = "^2.7.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sample = "sample.main:main"

